fixed security issue (final)